syntax = "proto3";

import "dev/restate/ext.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";

service durablePromiseServer {

	option (dev.restate.ext.service_type) = UNKEYED;

	rpc resolve(ResolvePromise) returns (PromiseResult) {};
	rpc reject(RejectPromise) returns (PromiseResult) {};
	rpc peek(PromiseName) returns (PromiseResult) {};
	rpc await(PromiseName) returns (PromiseResult) {};
	rpc dispose(PromiseName) returns (google.protobuf.Empty) {};
}

message PromiseName {
	string promiseName = 1;
}

message ResolvePromise {
	string promiseName = 1;
    google.protobuf.Value value = 2;
}

message RejectPromise {
	string promiseName = 1;
    string errorMessage = 2;
}

message PromiseResult {
	string promiseName = 1;
	bool completed = 2;
	oneof result {
        google.protobuf.Value value = 11;
		string errorMessage = 12;
	};
}
